# Flowturai-Frontend-und-Backend

./: .gitignore  DEPLOY.md  Flowturai_AGB.docx  Flowturai_Datenschutzerklaerung.docx  Flowturai_Impressum.docx  flowturai_git_fix_FINAL.ps1
Frontend Flowturai/: .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
Frontend Flowturai/.claude/: settings.local.json
Frontend Flowturai/app/: globals.css  layout.tsx  page.tsx
Frontend Flowturai/app/about/: page.tsx
Frontend Flowturai/app/agb/: page.tsx
Frontend Flowturai/app/datenschutz/: page.tsx
Frontend Flowturai/components/: AboutSection.tsx  ClaimsSlider.tsx  ContactSection.tsx  CookieBanner.tsx  Footer.tsx  HeroSection.tsx  Navigation.tsx  PricingSection.tsx  ServicesSection.tsx  WebPricingSection.tsx
flowturai-system/: .env.example  .gitignore  SETUP.md  deploy.ps1  deploy.sh  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  migration.sql  netlify.toml  package.json  run-migration.js  setup-ssh-key.ps1  update-env.ps1
flowturai-system/admin/: index.html
flowturai-system/backend/: Dockerfile  package.json
flowturai-system/desktop/: package.json
flowturai-system/desktop/src-tauri/: Cargo.toml  tauri.conf.json
flowturai-system/desktop/src-tauri/src/: main.rs
flowturai-system/nginx/: nginx.prod.conf  nginx.staging.conf
flowturai-system/sql/: accounting_additions.sql  schema.sql  sequences_and_storno.sql  supabase-setup-complete.sql  supabase-setup-fixed.sql
flowturai-system/supabase/: schema.sql
(+40 files in other folders)
