[package]
name    = "flowturai"
version = "2.0.0"
edition = "2021"

[lib]
name = "flowturai_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "flowturai"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri        = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

[profile.release]
panic  = "abort"
codegen-units = 1
lto    = true
opt-level = "s"
strip  = true
